syntax = "proto3";

package proto;

option go_package = "github.com/uwezukwechibuzor/blog-application/proto";

message LoginRequest {
    string Login = 1;
    string Password = 2;
}

message AuthResponse {
    string Token = 1;
}

message SignupRequest {
    string Username = 1;
    string Email = 2;
    string Password = 3;
}

message UsernameUsedRequest {
    string Username = 1;
}

message EmailUsedRequest {
    string Email = 1
}

service AuthService {
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc Signup(SignupRequest) returns (AuthResponse);
    rpc UsernameUsed(UsernameUsedRequest) returns (UsedResponse);
    rpc EmailUsed(EmailUsedRequest) returns (UsedResponse);
}